fix: Download app button position on tablet view

--- a/src/styles/buttonclient.styl
+++ b/src/styles/buttonclient.styl
@@ -12,6 +12,10 @@
 .coz-banner-client
     position relative
 
+    @media (min-width: (480/basefont)rem) and (max-width: (1023/basefont)rem)
+        margin-top     em(-30px)
+        margin-bottom  em(30px)
+
     @media (min-width: (1023/basefont)rem)
         display none
 
